--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Java 17",
-  "build": { "dockerfile": "Dockerfile" },
+  "image": "mcr.microsoft.com/devcontainers/java:17",
   "postCreateCommand": "mvn -v && java -version",
   "customizations": {
     "vscode": { "extensions": ["vscjava.vscode-java-pack"] }
